feat: Improve New Routine presentation

--- a/frontend/src/locales/es.json
+++ b/frontend/src/locales/es.json
@@ -91,6 +91,8 @@
     "generating": "Generando...",
     "newRoutine": "Nueva rutina",
     "propositionTitle": "Rutina propuesta",
+    "introText": "Aquí está tu rutina de estiramientos personalizada según tus necesidades y objetivos.",
+    "exploreExercisesText": "Toca cualquier ejercicio para descubrir sus detalles",
     "retryButton": "Dame otra propuesta",
     "startPractice": "Empezar a practicar",
     "editRoutine": "Editar la rutina",
