Add exercises translations and improve routine description

--- a/frontend/src/locales/fr.json
+++ b/frontend/src/locales/fr.json
@@ -91,11 +91,11 @@
     "generating": "Génération...",
     "newRoutine": "Nouvelle routine",
     "propositionTitle": "Routine proposée",
-    "introText": "Voici ta routine d'étirements personnalisée selon tes besoins et objectifs.",
-    "exploreExercisesText": "Touche n'importe quel exercice pour découvrir ses détails",
-    "retryButton": "Donne-moi un autre choix",
-    "startPractice": "Commencer la séance",
-    "editRoutine": "Modifier la routine",
+    "introText": "Ta routine personnalisée, adaptée à ta demande.",
+    "exploreExercisesText": "Touche un exercice pour voir ses caractéristiques",
+    "retryButton": "Donne-moi une autre proposition",
+    "startPractice": "Commencer la pratique",
+    "editRoutine": "Éditer la routine",
     "refineModalTitle": "Affiner votre routine",
     "refinePlaceholder": "ex: moins d'intensité sur le dos, plus d'étirements...",
     "refineButton": "Mettre à jour",
