--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -91,8 +91,8 @@
     "generating": "Generating...",
     "newRoutine": "New Routine",
     "propositionTitle": "Proposed Routine",
-    "introText": "Here is your personalized stretching routine based on your needs and goals.",
-    "exploreExercisesText": "Tap on any exercise to discover its details",
+    "introText": "Your personalized routine, tailored to your request.",
+    "exploreExercisesText": "Tap on any exercise to see its characteristics",
     "retryButton": "Give me another proposition",
     "startPractice": "Start to practice",
     "editRoutine": "Edit the Routine",
