--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -83,7 +83,7 @@
     "title": "Routines"
   },
   "newRoutine": {
-    "title": "Create New Routine",
+    "title": "New Routine",
     "description": "Help us build a routine tailored to your body",
     "invitationText": "Tell us about your sensations, mobility, physical comfort, and the areas you'd like to improve in your daily life.",
     "placeholder": "e.g. tight hips, limited shoulder mobility, feeling stiff after work, recovery after workouts...",
