--- a/frontend/src/locales/es.json
+++ b/frontend/src/locales/es.json
@@ -68,7 +68,10 @@
     "library": "Biblioteca",
     "searchPlaceholder": "Buscar un ejercicio...",
     "noExercisesFound": "No se encontró ningún ejercicio",
-    "addCustomExercise": "Agregar ejercicio personalizado"
+    "addCustomExercise": "Agregar ejercicio personalizado",
+    "filterByBenefits": "Filtrar por beneficios",
+    "clearFilters": "Limpiar",
+    "done": "Listo"
   },
   "exerciseDetails": {
     "notFound": "Ejercicio no encontrado",
