--- a/frontend/src/locales/es.json
+++ b/frontend/src/locales/es.json
@@ -87,7 +87,7 @@
   },
   "newRoutine": {
     "title": "Nueva Rutina",
-    "description": "Ayúdanos a crearte una rutina adaptada",
+    "description": "Ayúdanos a crearte una rutina adaptada.",
     "invitationText": "Cuéntanos sobre tus sensaciones, movilidad, comodidad física, y las áreas que te gustaría mejorar en tu vida diaria.",
     "placeholder": "ej. caderas apretadas, movilidad limitada de hombros, sensación de rigidez después del trabajo, recuperación después de entrenamientos...",
     "generateButton": "Generar mi rutina",
