--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -118,6 +118,7 @@
   "dailyRoutine": {
     "title": "Routine of the Day",
     "greeting": "Hello! Here's what we prepared for you today",
+    "locationPrefix": "You're in",
     "aiReasoning": "Based on your recent activity and common morning stiffness, I've designed this routine to open up your hips and lengthen your spine. This flow will help you feel more energized and mobile for the day ahead.",
     "benefitsTitle": "Why this routine?",
     "startToday": "Start Today's Routine"
