Translate on-boarding

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -119,9 +119,33 @@
     "title": "Routine of the Day",
     "greeting": "Hello! Here's what we prepared for you today",
     "locationPrefix": "You're in",
-    "aiReasoning": "Based on your recent activity and common morning stiffness, I've designed this routine to open up your hips and lengthen your spine. This flow will help you feel more energized and mobile for the day ahead.",
     "benefitsTitle": "Why this routine?",
     "startToday": "Start Today's Routine"
+  },
+  "onboarding": {
+    "title": "Welcome to Routines",
+    "subtitle": "Let's personalize your daily sessions",
+    "stepProfile": "Profile",
+    "stepContext": "Context",
+    "nameLabel": "What's your name?",
+    "namePlaceholder": "e.g. Alessio",
+    "fitnessLevel": "Fitness Level",
+    "levelBeginner": "Beginner",
+    "levelIntermediate": "Intermediate",
+    "levelAdvanced": "Advanced",
+    "primaryGoal": "Primary Goal",
+    "goalMobility": "Mobility & Flexibility",
+    "goalStrength": "Strength & Tone",
+    "goalRecovery": "Recovery & Pain Relief",
+    "limitationsLabel": "Injuries or Limitations?",
+    "limitationsPlaceholder": "e.g. Lower back pain, stiff neck...",
+    "calendarIntro": "Connect your Google Calendar to allow the AI to adapt your routines to your schedule.",
+    "googleCalendarAlt": "Google Calendar",
+    "connectCalendar": "Connect Google Calendar",
+    "calendarConnected": "Calendar Connected!",
+    "calendarPrivacy": "We only read your schedule to optimize exercise timing.",
+    "continue": "Continue",
+    "finish": "Finish Onboarding"
   },
   "pwa": {
     "installPrompt": {
