--- a/frontend/src/locales/es.json
+++ b/frontend/src/locales/es.json
@@ -118,9 +118,33 @@
     "title": "Rutina del Día",
     "greeting": "¡Hola! Aquí tienes lo que hemos preparado para ti hoy",
     "locationPrefix": "Estás en",
-    "aiReasoning": "Basado en tu actividad reciente y la rigidez matutina común, he diseñado esta rutina para abrir tus caderas y alargar tu columna. Este flujo te ayudará a sentirte más energizado y móvil durante el día.",
     "benefitsTitle": "¿Por qué esta rutina?",
     "startToday": "Empezar la Rutina de Hoy"
+  },
+  "onboarding": {
+    "title": "Bienvenido a Routines",
+    "subtitle": "Personaliza tus sesiones diarias",
+    "stepProfile": "Perfil",
+    "stepContext": "Contexto",
+    "nameLabel": "¿Cuál es tu nombre?",
+    "namePlaceholder": "ej. Alessio",
+    "fitnessLevel": "Nivel de forma",
+    "levelBeginner": "Principiante",
+    "levelIntermediate": "Intermedio",
+    "levelAdvanced": "Avanzado",
+    "primaryGoal": "Objetivo principal",
+    "goalMobility": "Movilidad y flexibilidad",
+    "goalStrength": "Fuerza y tono",
+    "goalRecovery": "Recuperación y alivio",
+    "limitationsLabel": "¿Lesiones o limitaciones?",
+    "limitationsPlaceholder": "ej. Dolor lumbar, cuello rígido...",
+    "calendarIntro": "Conecta tu Google Calendar para que la IA adapte tus rutinas a tu horario.",
+    "googleCalendarAlt": "Google Calendar",
+    "connectCalendar": "Conectar Google Calendar",
+    "calendarConnected": "¡Calendario conectado!",
+    "calendarPrivacy": "Solo leemos tu agenda para optimizar el momento de los ejercicios.",
+    "continue": "Continuar",
+    "finish": "Finalizar onboarding"
   },
   "pwa": {
     "installPrompt": {
